[package]
name = "infinitime-resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.5"
bytemuck = { version = "1.14.3", features = ["derive"] }
futures = "0.3.30"
miette = { version = "7.1.0", features = ["fancy"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }
uuid = "1.7.0"
